<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SizeDialogLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dialog"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/sizeBoard"
        android:textColor="#000" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s9x9"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s9x18"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s14x18"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s13x13"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s13x26"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s20x26"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s18x18"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s18x36"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s27x36"
                android:textColor="#000" />
        </TableRow>
    </TableLayout>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/levelAI"
        android:textColor="#000" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Single"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Expert"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Beginner"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/radioButton13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Professional"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/setOKButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_set" />

</LinearLayout>
